src/objects/Object__c.object
<CustomObject>
    <description>Dev Wiki to be used by SFDC team</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Case in which the request was made to create this object</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Objects</relationshipLabel>
        <relationshipName>Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Managed_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this object part of an installed app?</inlineHelpText>
        <label>Is Installed/Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a standard object?</inlineHelpText>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Notes__c</fullName>
        <inlineHelpText>Provide detailed background info about requirement which led to creation of this object.</inlineHelpText>
        <label>Object Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <inlineHelpText>Provide key table relationship info for the team&apos;s reference.</inlineHelpText>
        <label>Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicate user who requested creation of this object.</inlineHelpText>
        <label>Requesting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>